@@ -1,14 +1,19 @@
 package com.laosarl.gestion_de_stagiaires.Service;
 
+import com.laosarl.gestion_de_stagiaires.Repository.AdminRepository;
 import com.laosarl.gestion_de_stagiaires.Repository.DocumentRepository;
 import com.laosarl.gestion_de_stagiaires.Repository.InternshipApplicationRepository;
 import com.laosarl.gestion_de_stagiaires.Repository.SupervisorRepository;
 import com.laosarl.gestion_de_stagiaires.Service.mapper.InternshipApplicationMapper;
 import com.laosarl.gestion_de_stagiaires.domain.InternshipApplication;
 import com.laosarl.gestion_de_stagiaires.domain.InternshipApplicationStatus;
-import com.laosarl.gestion_de_stagiaires.domain.document.Document;
+import com.laosarl.gestion_de_stagiaires.domain.admin.Admin;
 import com.laosarl.gestion_de_stagiaires.domain.supervisor.Supervisor;
-import com.laosarl.internship_management.model.*;
+import com.laosarl.gestion_de_stagiaires.exceptions.ResourceNotFoundException;
+import com.laosarl.internship_management.model.InternshipApplicationRequestDTO;
+import com.laosarl.internship_management.model.InternshipApplicationResponseDTO;
+import com.laosarl.internship_management.model.ReasonDTO;
+import com.laosarl.internship_management.model.UpdateInternshipApplicationDTO;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -17,7 +22,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,13 +32,14 @@ public class InternshipApplicationService {
     private final SupervisorRepository supervisorRepository;
     private final MailService mailService;
     private final DocumentRepository documentRepository;
+    private final AdminRepository adminRepository;
 
     // ✅ Création d'une candidature
     @Transactional
     public InternshipApplicationResponseDTO create(InternshipApplicationRequestDTO internshipApplicationRequestDTO) {
         InternshipApplication entity = internshipApplicationMapper.toEntity(internshipApplicationRequestDTO, documentRepository);
         entity.setSubmissionDate(LocalDate.now());
-        entity.setStatus(InternshipApplicationStatus.IN_PROGRESS);
+        entity.setStatus(InternshipApplicationStatus.PUBLISHED);
         return internshipApplicationMapper.toResponseDTO(internshipApplicationRepository.save(entity));
     }
 
@@ -43,7 +48,7 @@ public class InternshipApplicationService {
     public List<InternshipApplicationResponseDTO> getAll() {
         return internshipApplicationRepository.findAll().stream()
                 .map(internshipApplicationMapper::toResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // ✅ Récupérer une candidature par ID
@@ -51,7 +56,7 @@ public class InternshipApplicationService {
     public InternshipApplicationResponseDTO getById(UUID internshipId) {
         return internshipApplicationRepository.findById(internshipId)
                 .map(internshipApplicationMapper::toResponseDTO)
-                .orElseThrow(() -> new IllegalArgumentException("Application not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Internship Application Not found"));
     }
 
     // ✅ Suppression
@@ -62,11 +67,14 @@ public class InternshipApplicationService {
 
     // ✅ Acceptation avec envoi d'email
     @Transactional
-    public InternshipApplicationResponseDTO accept(UUID internshipId) {
+    public void acceptInternship(UUID internshipId, String username) {
         InternshipApplication internshipApplication = internshipApplicationRepository.findById(internshipId)
-                .orElseThrow(() -> new IllegalArgumentException("Application not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Internship Application Not found"));
+        Admin admin = adminRepository.findByEmail(username).orElseThrow();
 
-        internshipApplication.setStatus(InternshipApplicationStatus.ACCEPTED);
+
+        internshipApplication.markHasAccept(admin);
+        internshipApplicationRepository.save(internshipApplication);
 
         mailService.sendEmail(
                 internshipApplication.getEmail(),
@@ -74,17 +82,19 @@ public class InternshipApplicationService {
                 "Bonjour " + internshipApplication.getFirstName() + ",\n\nVotre candidature a été acceptée. "
                         + "Nous vous attendons le " + internshipApplication.getStartDate() + " pour débuter votre stage.\nFélicitations !"
         );
-
-        return internshipApplicationMapper.toResponseDTO(internshipApplicationRepository.save(internshipApplication));
     }
 
     // ✅ Rejet avec envoi d'email
     @Transactional
-    public InternshipApplicationResponseDTO reject(UUID internshipId, String reason) {
+    public void rejectInternship(UUID internshipId,
+                                 ReasonDTO reason,
+                                 String username) {
         InternshipApplication internshipApplication = internshipApplicationRepository.findById(internshipId)
-                .orElseThrow(() -> new IllegalArgumentException("Application not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Internship Application Not found"));
+        Admin admin = adminRepository.findByEmail(username).orElseThrow();
 
-        internshipApplication.setStatus(InternshipApplicationStatus.REJECTED);
+        internshipApplication.markHasRejected(admin, reason.getDescription());
+        internshipApplicationRepository.save(internshipApplication);
 
         mailService.sendEmail(
                 internshipApplication.getEmail(),
@@ -92,8 +102,6 @@ public class InternshipApplicationService {
                 "Bonjour " + internshipApplication.getFirstName() + ",\n\nNous sommes désolés de vous informer que votre candidature "
                         + "a été refusée.\nRaison : " + reason + "\n\nCordialement."
         );
-
-        return internshipApplicationMapper.toResponseDTO(internshipApplicationRepository.save(internshipApplication));
     }
 
     // ✅ Mise à jour partielle (PATCH)
@@ -109,18 +117,15 @@ public class InternshipApplicationService {
 
     // ✅ Assignation d'un encadreur
     @Transactional
-    public void assignSupervisor(UUID internshipId, UUID supervisorId) {
+    public void assignSupervisor(UUID internshipId, UUID supervisorId, String username) {
         InternshipApplication internshipApplication = internshipApplicationRepository.findById(internshipId)
                 .orElseThrow(() -> new EntityNotFoundException("Internship application not found"));
-
-        if (!internshipApplication.getStatus().equals(InternshipApplicationStatus.ACCEPTED)) {
-            throw new IllegalStateException("Cannot assign supervisor. Internship is not accepted.");
-        }
-
         Supervisor supervisor = supervisorRepository.findById(supervisorId)
-                .orElseThrow(() -> new EntityNotFoundException("Supervisor not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Supervisor not found"));
+        Admin admin = adminRepository.findByEmail(username).orElseThrow();
 
-        internshipApplication.setSupervisor(supervisor);
+        internshipApplication.assignSupervisor(supervisor, admin);
+
         internshipApplicationRepository.save(internshipApplication);
     }
 }
